--- a/donate.html
+++ b/donate.html
@@ -17,23 +17,19 @@
             </ul>
         </nav>
         <br><br>
+
+		
+
         <div class="center"><h1><br><br><br><br><br><br><br><br>People will forget what you said. They will forget what you did. But they will never forget how you made them feel.</h1></div>
 			><br><br><br><br><br>
 			<center>
 				<img style="border:5px double rgb(40, 46, 42);" src="donatein.jpg" width="300" height="300">
 			</center>
 			<br><br><br><br><br><br><br>
-            <center>
-                <div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_Gkgl0lrnWQSGqv/view" data-text="DONATE NOW" data-color="#808080" data-size="large">
-					<script>
-					  (function(){
-						var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
-						if(x){ var s=d.createElement('script'); s.defer=!0;s.id='razorpay-embed-btn-js';
-						s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
-						rzp && rzp.init && rzp.init()}})();
-					</script>
-				  </div> 
-				</center>	
+            <div style="text-align: center; margin: 2rem;">
+                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_GuLLCvT9k6Z1Ex" async> </script> </form>
+					
+			</div>
 		</div>  
 </body>
 </html>
