--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="wrapper">
 			<nav class="navbar">
-				<img class="logo" src="logo1.jpg" href="index.html">
+				<img class="logo" src="logo.jpg" href="index.html">
 				<ul>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="donate.html">DONATE</a></li>
