--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,7 @@
 <body>
     <div class="wrapper">
         <nav class="navbar">
-            <img class="logo" src="logo1.jpg" href="index.html">
+            <img class="logo" src="logo.jpg" href="index.html">
             <ul>
                 <li><li><a href="index.html">HOME</a></li>
                 <li><a class="active" href="donate.html">DONATE</a></li>
@@ -23,7 +23,7 @@
         <div class="center"><h1><br><br><br><br><br><br><br><br>People will forget what you said. They will forget what you did. But they will never forget how you made them feel.</h1></div>
 			><br><br><br><br><br>
 			<center>
-				<img style="border:5px double rgb(40, 46, 42);" src="donatein.jpg" width="300" height="300">
+				<img style="border:5px double rgb(40, 46, 42);" src="bg1.jpg" width="300" height="300">
 			</center>
 			<br><br><br><br><br><br><br>
             <div style="text-align: center; margin: 2rem;">
