--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="wrapper">
         <nav class="navbar">
-            <img class="logo" src="logo1.jpg" href="index.html">
+            <img class="logo" src="logo.jpg" href="index.html">
             <ul>
                 <li><a class="active" href="index.html">HOME</a></li>
                 <li><a href="donate.html">DONATE</a></li>
